# conductor

./: Cargo.toml  README.md  handover.codex-smoke.md  handover.md  handover.smoke.md  workflow.claude-smoke.yaml  workflow.codex-smoke.yaml  workflow.yaml
src/: cli.rs  error.rs  lib.rs  main.rs  regen.rs  regen_clean.rs
src/runner/: agent.rs  handoff.rs  mod.rs
src/workflow/: loader.rs  mod.rs  model.rs  validate.rs
tests/: workflow_loader.rs
