[package]
name = "conductor"
version = "0.1.0"
edition = "2024"
default-run = "conductor"
description = "CLI orchestrator for multi-agent workflows between Claude Code and OpenAI Codex"
license = "MIT"
authors = ["Tom"]
repository = "https://example.com/conductor"
keywords = ["cli", "workflow", "automation", "ai", "orchestration"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
indexmap = { version = "2.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.15"
